--- a/password.html
+++ b/password.html
@@ -8,18 +8,23 @@
 	  <!-- CSS FILES -->
     <link rel="stylesheet" href="CSS/bootstrap.min.css">
 	  <!-- Change this to your own CSS file, which you will work in -->
-	  <link rel="stylesheet" href="Create an account/CSS/stylesheet1.css">
+	  <link rel="stylesheet" href="CSS/password.css">
 
 	  <!-- Change title -->
     <title>Change password</title>
   </head>
   <body> 
-	  
-	<form action="login.html" method="post">
+	  <header>
+	  <a href="index.html">
+    		<img src="Images/logo.png" height="150" alt="logo"></a>
+	   </header>
+	<form action="index.html" method="post">
 		<div class="container">
-   	 		<input type="text" placeholder="E-mail" name="uname" required>
-   			
-			<input type="password" placeholder="New password" name="psw" required >
+			<label for="uname"><b>Email</b></label>
+   	 		<input type="text" placeholder="Enter E-mail" name="uname" required>
+   			<label for="uname"><b>New Password</b></label>
+			<input type="password" placeholder="Enter New password" name="psw" required >
+			<label for="uname"><b>Repeat Password</b></label>
 			<input type="password" placeholder="Repeat password" name="psw" required>
     <label>
 		
@@ -27,17 +32,16 @@
  		</div>
 		  
 <div class=" signin">
-	<a href="login.html">
+	<a href="index.html">
 	   <button type="submit button" class="cancelbtn">Verify</button> 
  	</a>
   
 
 </div>
 		 
-</form>
-	  
-
-    <!-- Do not change unless it does not work. In that case relink to your own downloaded files -->
+</form>  
+   
 	  <script src="JS/jquery-3.4.1.slim.min.js"></script>
     <script src="JS/bootstrap.bundle.min.js"></script>
+	</body>
 </html>
