--- a/index.html
+++ b/index.html
@@ -22,11 +22,11 @@
 	<form action="" method="post">
 		<div class="container">
 			<label for="uname">
-				<h5>Username/E-mail:</h5>
+				<b>Username/E-mail</b>
 			</label>
    	 			<input type="text" placeholder="Enter Username/E-mail" name="uname" required>
-			<label for="psw">
-				<h5>Password:</h5>
+			<label class="password" for="psw">
+				<b>Password</b>
 			</label>
    				<input type="password" placeholder="Enter Password" name="psw" required>
     <label>
@@ -39,17 +39,15 @@
 	<div class="signin">
 		   <button type="submit button" class="cancelbtn">Sign In</button> 
 	  <div class="forgot1">
-		<a href="Create an account.html"> 
-			<p>Forgot Password?</p>
+		<a href="password.html"> 
+			<h6>Forgot Password?</h6>
 		</a>
-	  </div>
-			<div class="forgot2">
-		<a href="register page - owner.html"> 
+		  <div class="forgot2">
+		<a href="Register.html"> 
 			<p>Register</p>
 		</a>
 			</div>
-	  
-
+	  </div>
 	</div>
 		 
 </form>
