--- a/index.html
+++ b/index.html
@@ -19,7 +19,7 @@
 	  </header>
 	  
 	<!-- log in form -->
-	<form action="" method="post">
+	<form action="home.html" method="post">
 		<div class="container">
 			<label for="uname">
 				<b>Username/E-mail</b>
@@ -31,7 +31,7 @@
    				<input type="password" placeholder="Enter Password" name="psw" required>
     <label>
 		<p>
-      		<input type="checkbox" checked="checked" name="remember"> Remember me
+      		<input type="checkbox" checked="checked" name="remember" class="remember"> Remember me
 		</p>
    	</label>
  		</div>
