--- a/home.html
+++ b/home.html
@@ -32,8 +32,35 @@
 </span>
 	
 	<main onclick="closeNav()">
-		
-	<img class="cat" alt="cat" src="Images/chris-arthur-collins-qGkVJ7Tx36s-unsplash.jpg" height="200">
+		<div class="slideshow-container">
+
+  <!-- Full-width images with number and caption text -->
+  <div class="mySlides fade">
+    <div class="numbertext">1 / 3</div>
+    <img class="cat" alt="cat" src="Images/chris-arthur-collins-qGkVJ7Tx36s-unsplash.jpg"  style="width:60; height: 200px">
+	  <div class="text">We love our animals</div>
+  </div>
+
+  <div class="mySlides fade">
+    <div class="numbertext">2 / 3</div>
+    <img class="cat" alt="cat" src="Images/sindy-strife-W8iQBo22Mp4-unsplash.jpg"  style="width:60; height: 200px">
+  </div>
+
+  <div class="mySlides fade">
+    <div class="numbertext">3 / 3</div>
+     <img class="cat" alt="cat" src="Images/lydia-torrey-AovflqCt9Ws-unsplash.jpg"  style="width:60; height: 200px">
+    <div class="text">Our best friend</div>
+  </div>
+</div>
+<br>
+
+<!-- The dots/circles -->
+<div style="text-align:center">
+  <span class="dot" onclick="currentSlide(1)"></span>
+  <span class="dot" onclick="currentSlide(2)"></span>
+  <span class="dot" onclick="currentSlide(3)"></span>
+</div>
+	
 		</div>
 			<div class="main">
 		<h2>Welcome to Dierenziekenhuis Breda</h2>
