--- a/home.html
+++ b/home.html
@@ -13,9 +13,10 @@
 <div id="mySidenav" class="sidenav">
   <a href="javascript:void(0)" class="closebtn" onclick="closeNav()">&times;</a>
   <a class="a a1" href="home.html">Home</a>
-  <a class="a" href="#">Your Pets</a>
-  <a class="a" href="#">Appointments</a>
-  <a class="a" href="#">Messages</a>
+  <a class="a" href="pets.html">Your Pets</a>
+  <a class="a" href="Appointment.html">Appointments</a>
+  <a class="a" href="Recipe.html">Recipes</a>
+  <a class="a" href="messages.html">Messages</a>
   <a class="a" href="contact.html">Contact</a>	
 	<a class="logout" href="index.html">
 		<button type="button" class="cancelbtn">Logout</button> 
