--- a/pets.html
+++ b/pets.html
@@ -9,8 +9,34 @@
 	  <link href="CSS/menu.css" rel="stylesheet" type="text/css">
   </head>  
   <body>
+	
+<div id="mySidenav" class="sidenav">
+  <a href="javascript:void(0)" class="closebtn" onclick="closeNav()">&times;</a>
+  <a class="a a1" href="home.html">Home</a>
+  <a class="a" href="pets.html">Your Pets</a>
+  <a class="a" href="Appointment.html">Appointments</a>
+  <a class="a" href="Recipe.html">Recipes</a>
+  <a class="a" href="messages.html">Messages</a>
+  <a class="a" href="contact.html">Contact</a>	
+	<a class="logout" href="index.html">
+		<button type="button" class="cancelbtn">Logout</button> 
+	</a>
+</div>
 
-	  
+<div id="main">
+ <!-- Use any element to open the sidenav -->
+	<span onclick="openNav()">
+		<div class="div"></div>
+		<div class="div"></div>
+		<div class="div"></div>
+	</span>
+	
+	<main onclick="closeNav()">
+		<div class="main">
+			
+	</main>
+
+</div>
 	<script src="JS/jquery-3.4.1.slim.min.js"></script>
     <script src="JS/bootstrap.bundle.min.js"></script>
     <script src="JS/menu.js"></script>
