--- a/messages.html
+++ b/messages.html
@@ -33,7 +33,9 @@
 	
 	<main onclick="closeNav()">
  <div class="main">
-		<h2>Inbox</h2>
+	 <div class="inbox"><h2>Inbox <img class="env" alt="envelope" src="Images/iconfinder_icon-6-mail-envelope-closed_314900.png" height="50"></h2>
+	 </div>
+	
 			<hr>
 			
 	<div class="container">
