--- a/home.html
+++ b/home.html
@@ -91,5 +91,6 @@ veterinary care, together</h4>
 	<script src="JS/jquery-3.4.1.slim.min.js"></script>
     <script src="JS/bootstrap.bundle.min.js"></script>
     <script src="JS/menu.js"></script>
+	  <script src="JS/Home.js"></script>
    </body>
 </html>
