--- a/pets.html
+++ b/pets.html
@@ -33,12 +33,51 @@
 	
 	<main onclick="closeNav()">
 		<div class="main">
-			
+			<h1>Your pets:</h1>
+			<!-- Slideshow container -->
+				<div class="slideshow-container">
+
+  <!-- Full-width images with number and caption text -->
+  <div class="mySlides fade">
+    <div class="numbertext">1 / 2</div>
+	  <a href="">
+    <img class="img2" alt="pet2" src="Images/zoe-gayah-jonker-13ky5Ycf0ts-unsplash.jpg" style="width:60; height: 300px">
+    <div class="text"><h5>Lumiere (M)</h5>
+		<p>9 years old</p></div></a>
+  </div>
+
+  <div class="mySlides fade">
+    <div class="numbertext">2 / 2</div>
+	  <a href="">
+    <img class="img1" alt="pet1" src="Images/shane-guymon-KCdYn0xu2fU-unsplash.jpg" style="width:60; height: 300px">
+    <div class="text"><h5>Sammy (F)</h5>
+						<p>11 months old</p></div></a>
+  </div>
+
+
+  <!-- Next and previous buttons -->
+  <a class="prev" onclick="plusSlides(-1)">&#10094;</a>
+  <a class="next" onclick="plusSlides(1)">&#10095;</a>
+</div>
+<br>
+
+<!-- The dots/circles -->
+<div style="text-align:center">
+  <span class="dot" onclick="currentSlide(1)"></span>
+	<span class="dot" onclick="currentSlide(2)"></span>
+</div>
+		<div class="add">
+			<button type="button" class="cancelbtn">
+				Add a new pet
+			</button>
+		</div>
+		</div>	
 	</main>
 
-</div>
+
 	<script src="JS/jquery-3.4.1.slim.min.js"></script>
     <script src="JS/bootstrap.bundle.min.js"></script>
     <script src="JS/menu.js"></script>
+	<script src="JS/pets.js"></script>
    </body>
 </html>
