--- a/Recipe.html
+++ b/Recipe.html
@@ -34,7 +34,10 @@
 	<main onclick="closeNav()">
 			<h1>Recipes</h1>	
 				<hr>
-				  <div class="text">
+		<div class="text">
+			<img class="laptop" alt="" src="Images/catherine-heath-i4W8OINLI_I-unsplash.jpg" height="200">
+		</div>
+				  
 					<p>Repeat recipes will show up in the list. <br> You can order medication for your animal in two ways:</p>
 		
 						<ul>
@@ -42,7 +45,7 @@
 							<li>Go to your closest location to discuss with a vet</li>
 						</ul>
 					<p>Recipes can be picked up within two working days when in stock.</p>
-		</div>
+		
 		<h3>Order your recipe</h3>
 			
 	<div class="container">
