--- a/Appointment.html
+++ b/Appointment.html
@@ -7,7 +7,8 @@
     <link rel="stylesheet" href="CSS/S/bootstrap.min.css" type="text/css">
 	  <link href="CSS/appointment.css" rel="stylesheet" type="text/css">
 	  <link href="CSS/menu.css" rel="stylesheet" type="text/css">
-  </head>  
+  </head> 
+	
   <body>
 <div id="mySidenav" class="sidenav">
   <a href="javascript:void(0)" class="closebtn" onclick="closeNav()">&times;</a>
@@ -29,7 +30,11 @@
 		<div class="div"></div>
 		<div class="div"></div>
 	</span>
-	
+	<div class="img1">
+				<img class="cat" alt="dog" src="Images/jamie-street-Zqy-x7K5Qcg-unsplash.jpg" height="200">
+			</div>
+	  </div>
+	  
 		<div class="main">
 			
 		<h2>Make an Appointment:</h2>
