--- a/Recipe.html
+++ b/Recipe.html
@@ -74,10 +74,7 @@
 		  <b>Other</b>
 	  </option>
     </select>
-			
-			<label for="country">
-				<b>Medecine</b>
-			</label>
+    <label for="country2"> <strong>Medicine</strong> </label>
     <select id="country" name="country">
       <option value="australia">
 		  <b>Vaccanation</b>
