--- a/Appointment.html
+++ b/Appointment.html
@@ -58,7 +58,7 @@
     			<input type="text" id="pname" name="lastname" placeholder="Your pets name...">
 
 			<label for="country">
-				<b>Amount of animals</b>
+				<b>Number of animals</b>
 			</label>
     <select id="country" name="country">
       <option value="australia">
