--- a/Recipe.html
+++ b/Recipe.html
@@ -77,7 +77,7 @@
     <label for="country2"> <strong>Medicine</strong> </label>
     <select id="country" name="country">
       <option value="australia">
-		  <b>Vaccanation</b>
+		  <b>Vaccination</b>
 	  </option>
       <option value="canada">
 		  <b>Anti worms</b>
